--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -169,6 +169,7 @@
                 android:name=".ui.SplashActivity"
                 android:label="@string/app_name"
                 android:screenOrientation="portrait"
+                android:exported="true"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -178,13 +179,14 @@
         </activity>
         <service
                 android:name=".push.MyFirebaseMessagingService"
-                android:exported="false">
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
-        <service android:name="net.posprinter.service.PosprinterService" />
+        <service android:name="net.posprinter.service.PosprinterService"
+            android:exported="true"/>
 
         <!--
  Set custom default icon. This is used when no icon is set for incoming notification messages.
