resolved printer issue of button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -216,7 +216,8 @@
         </service>
 
         <service android:name="net.posprinter.service.PosprinterService"
-            android:exported="true"/>
+            android:exported="true"
+            android:permission="TODO" />
 
         <!--
  Set custom default icon. This is used when no icon is set for incoming notification messages.
@@ -224,7 +225,7 @@
         -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/ic_action_refresh" />
+            android:resource="@drawable/restaurant_menu_24px" />
         <!--
  Set color used with incoming notification messages. This is used when no color is set for the incoming
              notification message. See README(https://goo.gl/6BKBk7) for more.
